--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,5 +3,5 @@ source 'https://cdn.cocoapods.org/'
 platform :ios, '10.0'
 
 target 'XLogConsole_Example' do
-  pod 'XLogConsole', :path => '../'
+  pod 'XLogConsole/Helper', :path => '../'
 end
